updata back button

--- a/templates/success.html
+++ b/templates/success.html
@@ -13,5 +13,6 @@
       <h1>Thank You!</h1>
       <h2>Thank you for rating your experience. We hope to see you soon!</h2>
     </div>
+    <input type="button" value="Go back!" onclick="history.back()" />
   </body>
 </html>
